feature/M8F-76 initial updates for new templace package import export
